Fixed few UI elements on mobile display.

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -245,6 +245,7 @@ footer a {
   filter: none;
   position: relative;
 }
+
 .checkout-breadcrumb a:first-child,
 .checkout-breadcrumb span:first-child {
   padding-left: 40px; /* since the first link does not have a triangle before it we can reduce the left padding to make it look consistent with other links */
@@ -258,6 +259,21 @@ footer a {
 .checkout-breadcrumb span:last-child {
   padding-right: 20px;
   border-radius: 0 5px 5px 0; /* this was to prevent glitches on hover */
+}
+@media (max-width: 768px) {
+  .checkout-breadcrumb a,
+  .checkout-breadcrumb span {
+    font-size: 0;
+    padding-left: 50px;
+  }
+  .checkout-breadcrumb a:first-child,
+  .checkout-breadcrumb span:first-child {
+    padding-left: 35px;
+  }
+  .checkout-breadcrumb a:last-child,
+  .checkout-breadcrumb span:last-child {
+    padding-right: 15px;
+  }
 }
 .checkout-breadcrumb a.success,
 .checkout-breadcrumb span.success {
@@ -350,6 +366,7 @@ footer a {
   width: 18px;
   height: 18px;
   line-height: 18px;
+  font-size: 12px;
   margin: 7px 0;
   position: absolute;
   top: 0;
@@ -362,6 +379,11 @@ footer a {
 /* BEGIN TICKETS */
 .tickets .panel .media .media-left {
   padding-right: 20px;
+}
+@media (max-width: 768px) {
+  .tickets .panel .media .media-left {
+    display: none;
+  }
 }
 .tickets .panel .media .media-left img {
   /*width: 90px;*/
